implement auth header check and debug log
