# pi-cloud-components/cloud-server/swagger_server/controllers/default_controller.py
@@ -2,7 +2,7 @@ import connexion
 import six
 
 from swagger_client.models.unauthorized_response import UnauthorizedResponse
-from swagger_server.logic.handlers import authorization_check
+from swagger_server.logic.handlers import authorization_check, handle_add_coordinates, handle_retrive_instructions
 from swagger_server.models.added import Added  # noqa: E501
 from swagger_server.models.coordinate import Coordinate  # noqa: E501
 from swagger_server.models.error import Error  # noqa: E501
@@ -20,10 +20,10 @@ def add_coordinates(coordinates):  # noqa: E501
 
     :rtype: Added
     """
-    if not authorization_check(connexion.request.headers): return UnauthorizedResponse("")
+    if not authorization_check(connexion.request.headers): return UnauthorizedResponse("missing or invalid API key")
     if connexion.request.is_json:
         coordinates = [Coordinate.from_dict(d) for d in connexion.request.get_json()]  # noqa: E501
-    return 'do some magic!'
+    return handle_add_coordinates(coordinates)
 
 
 def retrive_instructions():  # noqa: E501
@@ -34,4 +34,5 @@ def retrive_instructions():  # noqa: E501
 
     :rtype: Instructions
     """
-    return 'do some magic!'
+    if not authorization_check(connexion.request.headers): return UnauthorizedResponse("missing or invalid API key")
+    return handle_retrive_instructions()
