# pi-cloud-components/cloud-server/swagger_server/logic/handlers.py
@@ -7,12 +7,16 @@ from swagger_server.models.coordinate import Coordinate  # noqa: E501
 from swagger_server.models.error import Error  # noqa: E501
 from swagger_server.models.instructions import Instructions  # noqa: E501
 from swagger_server import util
+from swagger_server.logic.stackdriver_logger import slogger
 
 
-# add
-#   if not authorization_check(connexion.request.headers): return UnauthorizedResponse("")
-def authorization_check(headers: Dict[str, str]):
-    headers.get('X-API-Key', 'definitely-unauthorised!')
+# todo: change mustache config to include the below auto-magically!
+# add the following into the controllers.
+#   if not authorization_check(connexion.request.headers): return UnauthorizedResponse("missing or invalid API key")
+def authorization_check(headers: Dict[str, str]) -> bool:
+    h = headers.get('X-API-Key', 'no-api-key-is-definitely-unauthorised!')
+    slogger.info("h = ", h)
+    return True
 
 
 def handle_add_coordinates(coordinates: List[Coordinate]) -> Added:  # noqa: E501
